versions/1.6.0/_sources/quickstart/index.rst.txt
=================
Quick Start Guide
=================

.. note::

   Please make sure you have installed ``metawards``, e.g. by following these
   :doc:`installation instructions <../install>`. You can test this by
   typing ``metawards --version`` on the terminal/console. Note that this
   should show that MetaWardsData has been found. If you have
   not installed MetaWardsData then you need to install it by
   following :doc:`these instructions <../model_data>`.

You have three choices for how you use MetaWards, and thus three choices
for how you will follow this quick start guide;

1. :doc:`R interface <01_R>`. You can choose to use MetaWards from directly
   within R (including interactively, e.g. within RStudio).

2. :doc:`Python interface <01_python>`. You can choose to use MetaWards from
   directly within Python (including interactively, e.g. within ipython or
   Jupyter notebook or lab).

3. :doc:`Command-line interface <01_console>`. You can choose to use MetaWards
   from the command line (terminal/console/command prompt).

There is no one right or wrong interface to use, so please feel free to use
the one (or many) that fit your needs.

This quick start should take about 30 minutes to follow. It is a precursor
to the :doc:`detailed tutorial <../tutorial/index>`. If you want to learn more,
please follow that tutorial, or read the
:doc:`detailed API documentation <../api/index>`. Please choose to follow
either the R, Python and console versions.

R / RStudio
-----------
.. toctree::
   :maxdepth: 2

   01_R
   02_R
   03_R

Python / Jupyter
----------------
.. toctree::
   :maxdepth: 2

   01_python
   02_python
   03_python

Console / Command line
----------------------
.. toctree::
   :maxdepth: 2

   01_console
   02_console
   03_console

Next steps
----------

Go to the :doc:`tutorial <../tutorial/index>` to learn more.
